Fixed issue with navbar cutting off pages.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    margin: 0 50px;
+    padding: 50px;
   }
 
   .content-body {
